syntax = "proto3";

package ares.datamodel;

// This is ares simple struct containing keys and values whose type should correspond with and related AresDataSchema
// This is similar to the built-in protobuf struct, but we do not allow nesting for simplicity and easier adherence
// to the schema
message AresStruct {
	map<string, AresValue> fields = 1;
}

message AresValue {
	oneof kind {
		NullValue null_value = 1;
		bool bool_value = 2;
		string string_value = 3;
		double number_value = 4;
		bytes bytes_value = 5;
		StringArray string_array_value = 6;
		NumberArray number_array_value = 7;
		AresValueList list_value = 8;
		AresStruct struct_value = 9;
		UnitValue unit_value = 10; // AresScript support
		FunctionValue function_value = 11; // AresScript support
	}
}

enum NullValue {
	NULL_VALUE = 0;
}

enum UnitValue {
	UNIT_VALUE = 0;
}

message FunctionValue {
	string function_id = 1;
}

message StringArray {
	repeated string strings = 1;
}

message NumberArray {
	repeated double numbers = 2;
}

message AresValueList {
	repeated AresValue values = 1;
}
